ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /foo
            backend:
              service:
                name: mongo-service
                port:
                  number: 27017
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webapp-service
                port:
                  number: 3000
